docs/mod/fabric/1.18/辅助类/优化补丁.md
# 优化补丁

## 重量级

### 重量级：综合

| 英文名（CurseForge）                                                                                    | 中文名（MCMOD）                                    | 相关链接                                                   | 备注             |
| ------------------------------------------------------------------------------------------------------- | -------------------------------------------------- | ---------------------------------------------------------- | ---------------- |
| [Lithium (Fabric)](https://www.curseforge.com/minecraft/mc-mods/lithium)                                | [锂](https://www.mcmod.cn/class/2292.html)         | [Modrinth](https://www.modrinth.com/mod/lithium)           | 计算方法优化     |
| [FerriteCore (Fabric)](https://www.curseforge.com/minecraft/mc-mods/ferritecore-fabric)                 | [铁氧体磁芯](https://www.mcmod.cn/class/3888.html) | [Modrinth](https://www.modrinth.com/mod/ferrite-core)      | 减少内存占用     |
| [Smooth Boot (Fabric)](https://www.curseforge.com/minecraft/mc-mods/smooth-boot)                        | [流畅加载](https://www.mcmod.cn/class/3422.html)   | [Modrinth](https://www.modrinth.com/mod/smoothboot-fabric) | 优化游戏加载时间 |
| [Concurrent Chunk Management Engine (Fabric)](https://www.curseforge.com/minecraft/mc-mods/c2me-fabric) | [C^2M 引擎](https://www.mcmod.cn/class/3511.html)  |                                                            | 提高区块的性能   |
| [Krypton](https://www.curseforge.com/minecraft/mc-mods/krypton)                                         | [氪](https://www.mcmod.cn/class/3399.html)         | [Modrinth](https://www.modrinth.com/mod/krypton)           | 优化网络堆栈     |

### 重量级：渲染

| 英文名（CurseForge）                                                                           | 中文名（MCMOD）                                           | 相关链接                                                                                     | 备注         |
| ---------------------------------------------------------------------------------------------- | --------------------------------------------------------- | -------------------------------------------------------------------------------------------- | ------------ |
| [Sodium](https://www.curseforge.com/minecraft/mc-mods/sodium)                                  | [钠](https://www.mcmod.cn/class/2785.html)                | [Modrinth](https://www.modrinth.com/mod/sodium)                                              | 渲染引擎优化 |
| > [Sodium Extra](https://www.curseforge.com/minecraft/mc-mods/sodium-extra)                    | [钠 · 扩展](https://www.mcmod.cn/class/3701.html)         | [Modrinth](https://www.modrinth.com/mod/sodium-extra)                                        |              |
| > [Indium](https://www.curseforge.com/minecraft/mc-mods/indium)                                | [铟](https://www.mcmod.cn/class/3413.html)                | [Modrinth](https://www.modrinth.com/mod/indium)｜[GitHub](https://github.com/comp500/Indium) |              |
| > [Reese's Sodium Options](https://www.curseforge.com/minecraft/mc-mods/reeses-sodium-options) | [Reese的钠视频界面](https://www.mcmod.cn/class/4905.html) |                                                                                              |              |
| [Iris Shaders](https://www.curseforge.com/minecraft/mc-mods/irisshaders)                       | [Iris Shaders](https://www.mcmod.cn/class/3697.html)      | [Modrinth](https://www.modrinth.com/mod/iris)                                                |              |

### 重量级：光照

| 英文名（CurseForge）                                                         | 中文名（MCMOD）                              | 相关链接                                                                                                          | 备注             |
| ---------------------------------------------------------------------------- | -------------------------------------------- | ----------------------------------------------------------------------------------------------------------------- | ---------------- |
| [Phosphor (Fabric)](https://www.curseforge.com/minecraft/mc-mods/phosphor)   | [磷](https://www.mcmod.cn/class/1766.html)   | [Modrinth](https://www.modrinth.com/mod/phosphor)                                                                 | 照明引擎优化     |
| [Starlight (Fabric)](https://www.curseforge.com/minecraft/mc-mods/starlight) | [星光](https://www.mcmod.cn/class/3303.html) | [Modrinth](https://www.modrinth.com/mod/starlight)｜[GitHub](https://github.com/Spottedleaf/Starlight/tree/forge) | 重写原版光照系统 |

## 轻量级

### 轻量级：综合

| 英文名（CurseForge）                                                                           | 中文名（MCMOD）                                     | 相关链接                                         | 备注                       |
| ---------------------------------------------------------------------------------------------- | --------------------------------------------------- | ------------------------------------------------ | -------------------------- |
| [Not Enough Crashes (Fabric)](https://www.curseforge.com/minecraft/mc-mods/not-enough-crashes) | [崩溃优化](https://www.mcmod.cn/class/2441.html)    |                                                  |                            |
| [Language Reload](https://www.curseforge.com/minecraft/mc-mods/language-reload)                |                                                     |                                                  |                            |
| [LazyDFU](https://www.curseforge.com/minecraft/mc-mods/lazydfu)                                | [LazyDFU](https://www.mcmod.cn/class/3407.html)     | [Modrinth](https://www.modrinth.com/mod/lazydfu) |                            |
| [CustomSkinLoader](https://www.curseforge.com/minecraft/mc-mods/customskinloader)              | [万用皮肤补丁](https://www.mcmod.cn/class/883.html) |                                                  |                            |
| [Very Many Players (Fabric)](https://www.curseforge.com/minecraft/mc-mods/vmp-fabric)          |                                                     |                                                  | 优化服务器玩家较多时的性能 |
| [XL Packets Fabric](https://www.curseforge.com/minecraft/mc-mods/xl-packets-fabric)            |                                                     |                                                  | 包大小限制提升到 2GB       |
| [No Null Processors](https://www.curseforge.com/minecraft/mc-mods/no-null-processors)          |                                                     |                                                  | 解决预生成器出现的问题     |

### 轻量级：渲染

| 英文名（CurseForge）                                                                            | 中文名（MCMOD）                                          | 相关链接                                             | 备注 |
| ----------------------------------------------------------------------------------------------- | -------------------------------------------------------- | ---------------------------------------------------- | ---- |
| [Cull Leaves](https://www.curseforge.com/minecraft/mc-mods/cull-leaves)                         | [树叶渲染优化](https://www.mcmod.cn/class/4414.html)     | [Modrinth](https://www.modrinth.com/mod/cull-leaves) |      |
| [Item Model Fix (Fabric)](https://www.curseforge.com/minecraft/mc-mods/item-model-fix)          | [物品模型修复](https://www.mcmod.cn/class/3845.html)     |                                                      |      |
| [Enhanced Block Entities](https://www.curseforge.com/minecraft/mc-mods/enhanced-block-entities) | [方块实体优化](https://www.mcmod.cn/class/3632.html)     | [Modrinth](https://www.modrinth.com/mod/ebe)         |      |
| [Entity Culling Fabric/Forge](https://www.curseforge.com/minecraft/mc-mods/entityculling)       | [实体渲染机制优化](https://www.mcmod.cn/class/3629.html) |                                                      |      |

### 轻量级：配方

| 英文名（CurseForge）                                                                            | 中文名（MCMOD）                                              | 相关链接 | 备注 |
| ----------------------------------------------------------------------------------------------- | ------------------------------------------------------------ | -------- | ---- |
| [FastBench for Fabric](https://www.curseforge.com/minecraft/mc-mods/fastbench-for-fabric)       | 工作台性能优化Fabric版                                       |          |      |
| [Fast Furnace for Fabric](https://www.curseforge.com/minecraft/mc-mods/fast-furnace-for-fabric) | [熔炉性能优化Fabric版](https://www.mcmod.cn/class/3079.html) |          |      |

## 试验性

| 英文名（CurseForge）                                                  | 中文名（MCMOD）                                  | 相关链接 | 备注 |
| --------------------------------------------------------------------- | ------------------------------------------------ | -------- | ---- |
| [DashLoader](https://www.curseforge.com/minecraft/mc-mods/dashloader) | [疾速加载](https://www.mcmod.cn/class/3841.html) |          |      |
